# EasyT9N

./: .gitignore  Baseline.ipynb  RAG_Enhanced.ipynb  README (1).md  README.md  pyproject.toml  requirements.txt
.chroma/: chroma.sqlite3
data/: en.json  glossary.csv  translation_memory.csv
eval/: final_comparison.csv  rag_comprehensive_evaluation.csv  rag_quality_vs_baseline.csv  rag_run_summary.csv  rag_vs_baseline_comparison.csv
eval/baseline/: comparison_results.csv
eval/baseline/claude-3-5-sonnet/: metrics_fr.json  metrics_it.json  metrics_ja.json
eval/baseline/claude-4-sonnet/: metrics_fr.json  metrics_it.json  metrics_ja.json
eval/baseline/gemini-2.5-flash/: metrics_fr.json  metrics_it.json  metrics_ja.json
eval/baseline/gpt-4o-mini/: metrics_fr.json  metrics_it.json  metrics_ja.json
translations/baseline/claude-3-5-sonnet/: fr.json  it.json  ja.json
translations/baseline/gemini-2.5-flash/: fr.json  it.json  ja.json
translations/baseline/gpt-4o-mini/: fr.json  it.json  ja.json
translations/rag/: fr.json  it.json  ja.json
