[project]
name = "easyt9n"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.68.1",
    "chromadb>=1.1.0",
    "faiss-cpu>=1.12.0",
    "google-genai>=1.38.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "sacrebleu>=2.5.1",
    "sentence-transformers>=5.1.1",
]
